devide to blocks

--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,19 @@
     <link rel="icon" href="./images/icons/logo__small.png">
   </head>
   <body class="page__body">
-    <header class="header">
-      <div class="container">
-        <div class="header__top-actions">
-          <a href="#menu__page" class="menu__icon icon"></a>
-          <a href="/" class="logo__icon icon"></a>
-        </div>
-        <section class="art-museum" id="museum">
-          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <a href="#" class="art-museum__button">
-            КВИТКИ
-            <div class="art-museum__button-arrow"></div>
-          </a>
-        </section>
-        <a href="#events" class="header__events-link">Події</a>
+    <header class="header container">
+      <div class="header__top-actions">
+        <a href="#menu__page" class="menu__icon icon"></a>
+        <a href="/" class="logo__icon icon"></a>
       </div>
+      <section class="art-museum" id="museum">
+        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#" class="art-museum__button">
+          КВИТКИ
+          <div class="art-museum__button-arrow"></div>
+        </a>
+      </section>
+      <a href="#events" class="header__events-link">Події</a>
     </header>
     <nav class="header__menu-page" id="menu__page">
       <div class="container">
@@ -59,16 +57,8 @@
     </nav>
 
     <main>
-      <!--<section class="art-museum container" id="museum">
-        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <a href="#" class="art-museum__button">
-          КВИТКИ
-          <div class="art-museum__button-arrow"></div>
-        </a>
-      </section>-->
 
       <section class="events container" id="events">
-
         <h2 class="events__title">Актуальні події</h2>
         <div class="events-card">
           <img
@@ -162,6 +152,7 @@
           </a>
         </form>
       </section>
+
     </main>
 
     <footer class="footer container grid">
@@ -182,7 +173,7 @@
           </a>
         </div>
       </div>
-      <div class="footer__content-wrapper  grid__item--tablet-2-5">
+      <div class="footer__content-wrapper grid__item--tablet-2-5 grid__item--desktop-3-6">
         <div class="footer__content">
           <div class="schedule">
             <p class="schedule-title">Графік роботи</p>
@@ -220,7 +211,7 @@
           <a href="#" class="scroll-up__link icon"></a>
         </div>
       </div>
-      <nav class="footer__menu grid__item--tablet-2-4">
+      <nav class="footer__menu grid__item--tablet-2-4 grid__item--desktop-8-10">
         <ul class="menu-list">
           <div class="menu-column">
             <li class="menu-item">
@@ -240,7 +231,7 @@
           </div>
         </ul>
       </nav>
-      <div class="rights-information grid__item--tablet-1-6">
+      <div class="rights-information grid__item--tablet-1-6 grid__item--desktop-1-12">
         <p class="rights-information__item">Designed by Zhyriada Marina</p>
         <p class="rights-information__item">Copyright © 2019. All Rights Reserved.</p>
       </div>
