--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,511 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="stylesheet" href="./styles/style.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/icons/logo-header.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <nav class="top-bar">
+          <a href="#menu" class="icon--menu"></a>
+
+          <div class="top-bar__logo-container">
+            <a href="#">
+              <img
+                src="./images/icons/logo-header.svg"
+                alt="logo"
+                class="top-bar__logo-img"
+              >
+            </a>
+          </div>
+
+          <a href="#menu" class="icon--menu-hidden"></a>
+        </nav>
+      </div>
+
+      <div class="container__header-bg">
+        <div class="header__backround"></div>
+      </div>
+
+      <div class="container">
+        <div class="header__content">
+          <div class="header__content-block content-block">
+            <h1 class="content-block__title">
+              Художній музей
+            </h1>
+
+            <div class="content-block__tickets">
+              <div class="content-block__tickets-left">
+                <p class="content-block__tickets-left--text">
+                  Квитки
+                </p>
+              </div>
+
+              <div class="content-block__tickets-right">
+                <a
+                  href="#"
+                  class="content-block__tickets-right--row"
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <article class="menu__left">
+            <div class="menu__top">
+              <a href="#" class="icon--close"></a>
+
+              <div class="menu__top--right">
+                <nav class="footer__nav--left">
+                  <p class="footer__nav--item">
+                    <a href="#galary" class="footer__nav--link-menu">Галерея</a>
+                  </p>
+
+                  <p class="footer__nav--item">
+                    <a href="#events" class="footer__nav--link-menu">Виставки та <br> події</a>
+                  </p>
+                </nav>
+
+                <nav class="footer__nav--right">
+                  <p class="footer__nav--item">
+                    <a href="#follow" class="footer__nav--link-menu">Про Нас</a>
+                  </p>
+
+                  <p class="footer__nav--item">
+                    <a href="#contact" class="footer__nav--link-menu">Контакти</a>
+                  </p>
+                </nav>
+              </div>
+            </div>
+          </article>
+
+          <div class="footer__line-menu"></div>
+
+          <article class="footer__info--plan--menu">
+            <p class="footer__info--title-menu">
+              Графік роботи:
+            </p><br>
+
+            <div class="footer__info--text-menu">
+              <p class="footer__info--text-top">
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> середа <br>
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> четвер <br>
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> п’ятниця <br>
+                <span class="footer__info--text-top-bold">11:00 — 19:00</span> субота <br>
+                <span class="footer__info--text-top-bold">11:00 — 19:00</span> неділя <br>
+              </p>
+
+              <p class="footer__info--text-bottom">
+                <span class="footer__info--bold-desktop-menu">Вихідні:</span>
+                понеділок, вівторок.<br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею.
+              </p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="main__actual-events actual-events"
+        id="events"
+      >
+        <div class="container">
+          <h1 class="actual-events__title">
+            Актуальні події
+          </h1>
+
+          <div class="actual-events__events">
+            <article
+              class="
+                  event
+                  actual-events__event
+                  actual-events__i-go-and-come-back
+                "
+            >
+              <img
+                src="./images/event/event-1.png"
+                alt="event-1"
+                class="event__photo"
+              >
+
+              <div class="event__text-block">
+                <div class="event__subtitle-block">
+                  <h4 class="event__subtitle-block--subtitle">
+                    Виставка
+                  </h4>
+
+                  <p class="event__subtitle-block--date">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+
+                <div class="event__title-block">
+                  <h3 class="event__title-block--title">
+                    Йду і повертаюсь
+                  </h3>
+
+                  <div class="event__title-block--square"></div>
+                </div>
+
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину
+                  колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article
+              class="
+                  event
+                  actual-events__event
+                  actual-events__and-memories-and-dreams
+                "
+            >
+              <img
+                src="./images/event/event-2.png"
+                alt="event-2"
+                class="event__photo"
+              >
+
+              <div class="event__text-block">
+                <div class="event__subtitle-block">
+                  <h4 class="event__subtitle-block--subtitle">
+                    Виставка
+                  </h4>
+
+                  <p class="event__subtitle-block--date">
+                    26.08-29.11.2019
+                  </p>
+
+                </div>
+
+                <div class="event__title-block">
+                  <h3 class="event__title-block--title">
+                    І спогади і мрії
+                  </h3>
+
+                  <div class="event__title-block--square"></div>
+                </div>
+
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці  Тетяни Яблонської відкриває ретроспективну
+                  ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__cultural-direction cultural-direction">
+        <div class="cultural-direction__bg">
+          <div class="container">
+            <div class="cultural-direction__text">
+              <div class="cultural-direction__subtitle-block">
+                <h4 class="cultural-direction__subtitle-block--subtitle">
+                  Лекція
+                </h4>
+
+                <p class="cultural-direction__subtitle-block--date">
+                  26/08/2019 - 11:00
+                </p>
+              </div>
+
+              <h3 class="cultural-direction__title">
+                Від класицизму до<br>романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="main__galary galary"
+        id="galary"
+      >
+        <div class="container">
+          <h1 class="galary__title">
+            Галерея
+          </h1>
+
+          <div class="galary__slider">
+            <div class="slider__img-container img-container">
+              <input
+                type="radio"
+                id="btn-1"
+                name="bt"
+                class="radio-btn"
+                checked
+              >
+
+              <input
+                type="radio"
+                id="btn-2"
+                name="bt"
+                class="radio-btn"
+              >
+
+              <input
+                type="radio"
+                id="btn-3"
+                name="bt"
+                class="radio-btn"
+              >
+
+              <input
+                type="radio"
+                id="btn-4"
+                name="bt"
+                class="radio-btn"
+              >
+
+              <div class="img-container__painting paint">
+                <img
+                  src="./images/galary/img-1.png"
+                  alt="paint-1"
+                >
+              </div>
+
+              <div class="img-container__painting">
+                <img
+                  src="./images/galary/img-2.png"
+                  alt="paint-2"
+                >
+              </div>
+
+              <div class="img-container__painting">
+                <img
+                  src="./images/galary/img-1.png"
+                  alt="paint-3"
+                >
+              </div>
+
+              <div class="img-container__painting">
+                <img
+                  src="./images/galary/img-2.png"
+                  alt="paint-4"
+                >
+              </div>
+            </div>
+
+            <div class="slider__buttons buttons">
+              <label for="btn-1" class="buttons__btn"></label>
+              <label for="btn-2" class="buttons__btn"></label>
+              <label for="btn-3" class="buttons__btn"></label>
+              <label for="btn-4" class="buttons__btn"></label>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="galary__exhibition">
+            <div class="galary__exhibition--block galary__exhibition--block1"></div>
+            <div class="galary__exhibition--block galary__exhibition--block2"></div>
+            <div class="galary__exhibition--block galary__exhibition--block3"></div>
+            <div class="galary__exhibition--block galary__exhibition--block4"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="main__follow follow"
+        id="follow"
+      >
+        <div class="container">
+          <h1 class="follow__title">
+            Підписка
+          </h1>
+
+          <p class="follow__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            class="follow__button-block"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="follow__button-block--email"
+              required
+            >
+
+            <button class="follow__button-block--btn">
+              <img
+                src="./images/follow/row.svg"
+                alt="row"
+                class="follow__button-block--img"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <article class="footer__top">
+            <a href="#" class="footer__top--logo-link">
+              <img
+                src="./images/icons/logo-footer.svg"
+                alt="logo"
+                class="footer__top--logo-img"
+              >
+            </a>
+
+            <div class="footer__top--network">
+              <a
+                href="https://www.facebook.com/?locale=uk_UA"
+                class="footer__top--link"
+                target="_blank"
+              >
+                <img
+                  src="./images/icons/facebook-logo.svg"
+                  alt="facebook-logo"
+                  class="footer__top--image"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                class="footer__top--link"
+                target="_blank"
+              >
+                <img
+                  src="./images/icons/instagram-logo.svg"
+                  alt="instagram-logo"
+                  class="footer__top--image"
+                >
+              </a>
+            </div>
+          </article>
+
+          <article class="footer__info--plan">
+            <p class="footer__info--title">
+              Графік роботи:
+            </p><br>
+
+            <div class="footer__info--text">
+              <p class="footer__info--text-top">
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> середа <br>
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> четвер <br>
+                <span class="footer__info--text-top-bold">12:00 — 20:00</span> п’ятниця <br>
+                <span class="footer__info--text-top-bold">11:00 — 19:00</span> субота <br>
+                <span class="footer__info--text-top-bold">11:00 — 19:00</span> неділя <br>
+              </p>
+
+              <p class="footer__info--text-bottom">
+                <span class="footer__info--bold-desktop">Вихідні:</span>
+                понеділок, вівторок.<br>
+                Каса припиняє роботу за 1 годину<br>
+                до закриття музею.
+              </p>
+            </div>
+          </article>
+
+          <article
+            class="footer__info--contact"
+            id="contact"
+          >
+            <p class="footer__info--title">
+              Контакти:
+            </p><br>
+
+            <div class="footer__info--text-contact">
+              <a
+                href="http://surl.li/oeeeh"
+                class="footer__info--map"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a><br>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__info--tel"
+              >
+                тел. +38 (044) 278-13-57
+              </a><br>
+
+              <a
+                href="tel:+380442787454"
+                class="footer__info--fax"
+              >
+                факс +38 (044) 278-74-54
+              </a><br>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__info--email"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </article>
+
+          <div class="footer__arrow-up">
+            <a href="#" class="footer__arrow-up--link">
+              <img
+                src="./images/icons/arrow.svg"
+                alt="arrow-up"
+                class="footer__arrow-up--img"
+              >
+            </a>
+          </div>
+
+          <div class="footer__line"></div>
+
+          <nav class="footer__nav--left">
+            <p class="footer__nav--item">
+              <a href="#galary" class="footer__nav--link">Галерея</a>
+            </p>
+
+            <p class="footer__nav--item">
+              <a href="#events" class="footer__nav--link">Виставки та події</a>
+            </p>
+          </nav>
+
+          <nav class="footer__nav--right">
+            <p class="footer__nav--item">
+              <a href="#follow" class="footer__nav--link">Про Нас</a>
+            </p>
+
+            <p class="footer__nav--item">
+              <a href="#contact" class="footer__nav--link">Контакти</a>
+            </p>
+          </nav>
+
+          <p class="footer__bottom--left">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+
+          <p class="footer__bottom--right">
+            Designed by Zhyriada Marina
+          </p>
+
+          <p class="footer__bottom--left-mobile">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
