--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,365 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    >
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__section">
+        <section class="picture">
+          <h1 class="picture__title">NA<br>MU</h1>
+        </section>
+        <section class="tickets container">
+          <h1 class="tickets__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="tickets__button">
+            <a class="tickets__button-link" href="#exhibitions">КВИТКИ</a>
+            <button class="tickets__button-arrow"></button>
+          </div>
+          <div class="tickets__link">
+            <a class="tickets__link-item" href="#exhibitions">ПОДІЇ</a>
+            <div class="tickets__link-line"></div>
+          </div>
+        </section>
+      </div>
+      <div class="container">
+        <a href="#menu" class="icon"></a>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__wrap container">
+        <a href="#" class="icon icon--close"></a>
+        <div class="menu__nav">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#about-us">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#exhibitions">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__schedule">
+          <p class="schedule__title">Графік роботи</p>
+          <div class="schedule">
+            <ul class="schedule__list">
+              <li class="schedule__list-item">
+                <p class="schedule__list-item-time">12:00 — 20:00</p>
+                <p class="schedule__list-item-day">середа</p>
+              </li>
+              <li class="schedule__list-item">
+                <p class="schedule__list-item-time">12:00 — 20:00</p>
+                <p class="schedule__list-item-day">четвер</p>
+              </li>
+              <li class="schedule__list-item">
+                <p class="schedule__list-item-time">12:00 — 20:00</p>
+                <p class="schedule__list-item-day">п'ятниця</p>
+              </li>
+              <li class="schedule__list-item">
+                <p class="schedule__list-item-time">11:00 — 19:00</p>
+                <p class="schedule__list-item-day">субота</p>
+              </li>
+              <li class="schedule__list-item">
+                <p class="schedule__list-item-time">11:00 — 19:00</p>
+                <p class="schedule__list-item-day">неділя</p>
+              </li>
+            </ul>
+            <div class="schedule__list">
+              <div class="schedule__list-item schedule__list-item--weekend">
+                <p class="schedule__list-item-time">Вихідні:</p>
+                <p class="schedule__list-item-day">понеділок, вівторок</p>
+              </div>
+              <div class="schedule__list-item">
+                <p class="schedule__list-item-day">Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <h1 class="main__title container">Актуальні події</h1>
+
+      <section class="exhibition container" id="exhibitions">
+        <div class="exhibition__card">
+          <img
+            class="exhibition__card-picture"
+            src="./images/events/event1.png"
+            alt="..."
+          >
+
+          <div class="exhibition__card-info">
+            <div class="exhibition__card-info-date">
+              <p class="exhibition__card-info-date-exhib">ВИСТАВКА</p>
+              <p class="exhibition__card-info-date-value">26.08-29.11.2019</p>
+            </div>
+
+            <div class="exhibition__card-info-name">
+              <h2>Йду і повертаюсь</h2>
+              <p class="exhibition__card-info-name-ico"></p>
+            </div>
+
+            <p class="exhibition__card-info-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+
+        <div class="exhibition__card">
+          <img
+            class="exhibition__card-picture"
+            src="./images/events/event2.png"
+            alt="..."
+          >
+
+          <div class="exhibition__card-info">
+            <div class="exhibition__card-info-date">
+              <p class="exhibition__card-info-date-exhib">ВИСТАВКА</p>
+              <p class="exhibition__card-info-date-value">26.08-29.11.2019</p>
+            </div>
+
+            <div class="exhibition__card-info-name">
+              <h2>І спогади і мрії</h2>
+              <p class="exhibition__card-info-name-ico"></p>
+            </div>
+
+            <p class="exhibition__card-info-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <div class="lecture__card">
+          <div class="lecture__card-date">
+            <p class="lecture__card-date-exhib">ЛЕКЦІЯ</p>
+            <p class="lecture__card-date-value">26/08/2019 - 11:00</p>
+          </div>
+          <h2 class="lecture__card-description">Від класицизму до<br> романтизму</h2>
+        </div>
+      </section>
+
+      <h1 class="main__title container">Галерея</h1>
+
+      <section class="gallery" id="gallery">
+        <div class="gallery__slides container">
+          <input
+            class="gallery__slides-radio gallery__slides-radio--r1"
+            type="radio"
+            name="r"
+            checked
+          >
+          <input
+            class="gallery__slides-radio gallery__slides-radio--r2"
+            type="radio"
+            name="r"
+          >
+          <input
+            class="gallery__slides-radio gallery__slides-radio--r3"
+            type="radio"
+            name="r"
+          >
+          <input
+            class="gallery__slides-radio gallery__slides-radio--r4"
+            type="radio"
+            name="r"
+          >
+
+          <div class="gallery__slides-slide gallery__slides-slide--s1 s1">
+            <img
+              src="./images/gallery/gallery1.png"
+              alt="..."
+              class="gallery__slides-slide-img"
+            >
+          </div>
+          <div class="gallery__slides-slide gallery__slides-slide--s2 s2">
+            <img
+              src="./images/gallery/gallery2.png"
+              alt="..."
+              class="gallery__slides-slide-img"
+            >
+          </div>
+          <div class="gallery__slides-slide gallery__slides-slide--s3 s3">
+            <img
+              src="./images/gallery/gallery3.png"
+              alt="..."
+              class="gallery__slides-slide-img"
+            >
+          </div>
+          <div class="gallery__slides-slide gallery__slides-slide--s4 s4">
+            <img
+              src="./images/gallery/gallery4.png"
+              alt="..."
+              class="gallery__slides-slide-img"
+            >
+          </div>
+        </div>
+
+        <div class="gallery__navigation">
+          <label for="r1" class="gallery__navigation-bar"></label>
+          <label for="r2" class="gallery__navigation-bar"></label>
+          <label for="r3" class="gallery__navigation-bar"></label>
+          <label for="r4" class="gallery__navigation-bar"></label>
+        </div>
+      </section>
+
+      <section class="subscription" id="about-us">
+        <div class="subscription__wrap container">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            class="subscription__form"
+            onsubmit="this.reset(); return false;"
+            action="/form/submit"
+            method="post"
+            autocomplete="off"
+          >
+            <input
+              class="subscription__form-input"
+              type="email"
+              placeholder="E-mail"
+              required>
+            <button class="subscription__form-button" type="submit"></button>
+          </form>
+        </div>
+      </section>
+
+      <section class="contacts container" id="contacts">
+        <nav class="contacts__logo">
+          <h1 class="contacts__logo-title">NA<br>MU</h1>
+          <div class="contacts__logo-social">
+            <a
+              class="contacts__logo-social-link contacts__logo-social-link--facebook"
+              href="https://www.facebook.com"
+              target="_blank"
+            >
+            </a>
+
+            <a
+              class="contacts__logo-social-link contacts__logo-social-link--instagram"
+              href="https://www.instagram.com"
+              target="_blank"
+            >
+            </a>
+          </div>
+        </nav>
+
+        <div class="contacts__contact">
+          <div class="contacts__contact-work">
+            <p class="contacts__contact-work-title">Графік роботи</p>
+            <div class="work">
+              <ul class="work__list">
+                <li class="work__list-item">
+                  <p class="work__list-item-time">12:00 — 20:00</p>
+                  <p class="work__list-item-day">середа</p>
+                </li>
+                <li class="work__list-item">
+                  <p class="work__list-item-time">12:00 — 20:00</p>
+                  <p class="work__list-item-day">четвер</p>
+                </li>
+                <li class="work__list-item">
+                  <p class="work__list-item-time">12:00 — 20:00</p>
+                  <p class="work__list-item-day">п'ятниця</p>
+                </li>
+                <li class="work__list-item">
+                  <p class="work__list-item-time">11:00 — 19:00</p>
+                  <p class="work__list-item-day">субота</p>
+                </li>
+                <li class="work__list-item">
+                  <p class="work__list-item-time">11:00 — 19:00</p>
+                  <p class="work__list-item-day">неділя</p>
+                </li>
+              </ul>
+              <div class="work__list">
+                <div class="work__list-item">
+                  <p class="work__list-item-day">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="contacts__contact-address">
+            <p class="contacts__contact-address-title">Контакти:</p>
+            <div class="address">
+              <ul class="address__list">
+                <li class="address__item">
+                  <a
+                    class="address__link"
+                    href="http://maps.google.com/?q=1200 вул. м. Грушевського, 6; Київ, 01001"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+                <li class="address__item">
+                  <a class="address__link" href="tel: +38 044 278-13-57">тел. +38 (044) 278-13-57</a>
+                </li>
+                <li class="address__item">
+                  <a class="address__link" href="fax: +38 044 278-74-54">факс +38 (044) 278-74-54</a>
+                </li>
+                <li class="address__item">
+                  <a class="address__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="contacts__nav">
+          <div class="contacts__line"></div>
+          <a class="contacts__botton" href="./index.html"></a>
+          <nav class="contacts__nav-block">
+            <ul class="contacts__nav-block-list">
+              <li class="contacts__nav-block-item">
+                <a class="contacts__nav-block-link" href="#gallery">Галерея</a>
+              </li>
+              <li class="contacts__nav-block-item">
+                <a class="contacts__nav-block-link" href="#about-us">Про Нас</a>
+              </li>
+              <li class="contacts__nav-block-item">
+                <a class="contacts__nav-block-link" href="#exhibitions">Виставки та події</a>
+              </li>
+              <li class="contacts__nav-block-item">
+                <a class="contacts__nav-block-link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <p class="footer__text">Designed by Zhyriada Marina</p>
+      <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
