--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
       </div>
     </header>
 
-    <aside class="overlay">
-      <div  class="menu" id="menu">
+    <aside class="overlay" id="menu">
+      <div  class="menu">
         <div
           class="menu__top">
           <a href="#">
@@ -271,64 +271,57 @@
           Галерея
         </h2>
         <div class="slider">
-          <img
-            class="gallery__img"
-            src="./images/women.png"
-            alt="women">
-          <img
-            class="gallery__img"
-            src="./images/geese.png"
-            alt="geese">
-        </div>
-
-        <!--
-        <div id="slider" class="slider">
-          <div class="slider_item">
+          <div class="slider__item
+            slider__item--woman">
             <img
-              class="slider_img"
+              class="slider__img
+              slider__img--woman"
               src="./images/women.png"
-              alt="women"
-            >
+              alt="women">
           </div>
-          <div class="slider_item">
+
+          <div class="slider__item
+            slider__item--geese">
             <img
-              class="slider_img"
+              class="slider__img"
               src="./images/geese.png"
-              alt="geese"
-            >
+              alt="geese">
           </div>
-          <div class="slider_item">
+
+          <div class="slider__item
+            slider__item--village">
             <img
-              class="slider_img"
-              src="./images/geese.png"
-              alt="geese"
-            >
-          </div>
-          <div class="slider_item">
-            <img
-              class="slider_img"
+              class="slider__img"
               src="./images/village.png"
               alt="village"
             >
           </div>
-          <div class="slider_item">
+
+          <div class="slider__item
+            slider__item--park">
             <img
-              class="slider_img"
+              class="slider__img"
               src="./images/park.png"
               alt="park"
             >
           </div>
-          <div class="slider_item">
+
+          <div class="slider__item
+            slider__item--sea">
             <img
-              class="slider_img"
+              class="slider__img"
               src="./images/sea.png"
               alt="sea"
             >
           </div>
         </div>
-        <div class="dotts"></div>
-        -->
 
+        <div class="dotts">
+          <div class="dot dot--active"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
       </div>
 
 
