--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           <h1 class="tickets__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <div class="tickets__button">
             <a class="tickets__button-link" href="#exhibitions">КВИТКИ</a>
-            <button class="tickets__button-arrow"></button>
+            <a class="tickets__button-arrow" href="#exhibitions"></a>
           </div>
           <div class="tickets__link">
             <a class="tickets__link-item" href="#exhibitions">ПОДІЇ</a>
@@ -41,14 +41,13 @@
           </div>
         </section>
       </div>
-      <div class="container">
-        <a href="#menu" class="icon"></a>
-      </div>
+      <a href="#menu" class="icon"></a>
     </header>
 
     <aside class="menu page__menu" id="menu">
-      <div class="menu__wrap container">
+      <div class="menu__wrap">
         <a href="#" class="icon icon--close"></a>
+
         <div class="menu__nav">
           <nav class="nav">
             <ul class="nav__list">
