--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="header__section">
         <section class="picture">
-          <h1 class="picture__title">NA<br>MU</h1>
+          <a class="picture__link" href="./index.html"><h1  class="picture__title">NA<br>MU</h1></a>
         </section>
         <section class="tickets container">
           <h1 class="tickets__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -175,21 +175,25 @@
             class="gallery__slides-radio gallery__slides-radio--r1"
             type="radio"
             name="r"
+            id="r1"
             checked
           >
           <input
             class="gallery__slides-radio gallery__slides-radio--r2"
             type="radio"
+            id="r2"
             name="r"
           >
           <input
             class="gallery__slides-radio gallery__slides-radio--r3"
             type="radio"
+            id="r3"
             name="r"
           >
           <input
             class="gallery__slides-radio gallery__slides-radio--r4"
             type="radio"
+            id="r4"
             name="r"
           >
 
@@ -254,7 +258,7 @@
 
       <section class="contacts container" id="contacts">
         <nav class="contacts__logo">
-          <h1 class="contacts__logo-title">NA<br>MU</h1>
+          <a class="contacts__logo-link" href="./index.html"><h1  class="contacts__logo-title">NA<br>MU</h1></a>
           <div class="contacts__logo-social">
             <a
               class="contacts__logo-social-link contacts__logo-social-link--facebook"
@@ -332,10 +336,10 @@
             </div>
           </div>
         </div>
-
+        <a class="contacts__botton" href="./index.html"></a>
         <div class="contacts__nav">
           <div class="contacts__line"></div>
-          <a class="contacts__botton" href="./index.html"></a>
+
           <nav class="contacts__nav-block">
             <ul class="contacts__nav-block-list">
               <li class="contacts__nav-block-item">
