add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,15 @@
   </head>
   <body class="page__body" id="page-top">
     <header class="header">
+      <div class="header__image"></div>
       <div class="container">
         <div class="header__content">
           <div class="top-bar">
             <a class="top-bar__menu-link" href="#menu">
               <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24" height="24"
-                viewBox="0 0 24 24" fill="none">
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24" height="24"
+                    viewBox="0 0 24 24" fill="none">
                 <g clip-path="url(#clip0_320_168)">
                   <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08"
                   ></path>
@@ -36,19 +37,19 @@
                 <defs>
                   <clippath id="clip0_320_168">
                     <rect
-                      width="24"
-                      height="24"
-                      fill="white"
-                    >
+                          width="24"
+                          height="24"
+                          fill="white"
+                        >
                   </clippath>
                 </defs>
               </svg>
             </a>
             <a class="top-bar__logo-link" href="#">
               <p class="top-bar__logo-text">
-                NA
+                    NA
                 <br>
-                MU
+                    MU
               </p>
             </a>
           </div>
@@ -78,8 +79,11 @@
               </svg>
             </a>
           </div>
+
+
         </div>
       </div>
+
     </header>
 
     <aside class="page__menu menu" id="menu">
@@ -346,7 +350,6 @@
           </div>
         </div>
       </div>
-      </div>
     </main>
 
 
@@ -362,7 +365,9 @@
               </p>
             </a>
             <div class="footer__icon">
-              <a href="https://uk-ua.facebook.com/">
+              <a href="https://uk-ua.facebook.com/"
+                target="_blank"
+              >
                 <svg
                   class="footer__facebook"
                   xmlns="http://www.w3.org/2000/svg"
@@ -380,7 +385,9 @@
                   </defs>
                 </svg>
               </a>
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/"
+                target="_blank"
+              >
                 <svg class="footer__facebook"
                   xmlns="http://www.w3.org/2000/svg" width="25"
                   height="24" viewBox="0 0 25 24"
@@ -450,11 +457,11 @@
                 факс +38 (044) 278-74-54
             </a>
             <a class="footer__info"
-            href="maailto:info@namu.kiev.ua"
-            target="_blank"
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
             >
               <br>
-              e-mail: info@namu.kiev.ua
+              e-mail:info@namu.kiev.ua
             </a>
           </div>
           <a class="footer__tops" href="#page-top">
