--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,8 @@
             class="subscription__input" 
             type="email" 
             placeholder="E-mail" 
-            name="email"  
+            name="email" 
+            id="email" 
             required
           >
           <button class="button subscription__button" type="submit">
