add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -245,34 +245,41 @@
         <section class="image" id="galery">
           <div class="container">
             <div class="image__content">
-              
               <h2 class="image__section-title">Галерея</h2>
               <article class="image__slider">
-                <img
-                  class="image__photo"
-                  src="images/slider.png"
-                  alt="photo"
-                >
+                <div class="image__main">
+                  <img
+                    class="image__photo"
+                    src="images/slider.png"
+                    alt="photo"
+                  >
+                </div>
                 <img
                   class="image__photos"
                   src="images/slider1.png"
                   alt="photo"
                 >
-                <img
-                  class="image__images"
-                  src="images/slider3.png"
-                  alt="photo"
-                >
-                <img
-                  class="image__images"
-                  src="images/slider4.png"
-                  alt="photo"
-                >
-                <img
-                  class="image__images"
-                  src="images/slider5.png"
-                  alt="photo"
-                >
+                <div class="image__main">
+                  <img
+                    class="image__images"
+                    src="images/slider3.png"
+                    alt="photo"
+                  >
+                </div>
+                <div class="image__main">
+                  <img
+                    class="image__images"
+                    src="images/slider4.png"
+                    alt="photo"
+                  >
+                </div>
+                <div class="image__main">
+                  <img
+                    class="image__images"
+                    src="images/slider5.png"
+                    alt="photo"
+                  >
+                </div>
               </article>
 
               <div class="image__buttonss">
@@ -296,7 +303,6 @@
                         >
                 </svg>
               </div>
-
             </div>
           </div>
         </section>
