add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -244,69 +244,67 @@
 
         <section class="image" id="galery">
           <div class="container">
-            <div class="image__content">
-              <h2 class="image__section-title">Галерея</h2>
-              <article class="image__slider">
-                <div class="image__main">
-                  <img
-                    class="image__photo"
-                    src="images/slider.png"
-                    alt="photo"
-                  >
-                </div>
+            <h2 class="image__section-title">Галерея</h2>
+            <article class="image__slider">
+              <div class="image__main--four">
+                <img
+                  class="image__photo"
+                  src="images/slider.png"
+                  alt="photo"
+                >
+              </div>
+              <div class="image__main--fours">
                 <img
                   class="image__photos"
                   src="images/slider1.png"
                   alt="photo"
                 >
-                <div class="image__main">
-                  <img
-                    class="image__images"
-                    src="images/slider3.png"
-                    alt="photo"
-                  >
-                </div>
-                <div class="image__main">
-                  <img
-                    class="image__images"
-                    src="images/slider4.png"
-                    alt="photo"
-                  >
-                </div>
-                <div class="image__main">
-                  <img
-                    class="image__images"
-                    src="images/slider5.png"
-                    alt="photo"
-                  >
-                </div>
-              </article>
-
-              <div class="image__buttonss">
-                <svg
-                  class="image__button"
-                  xmlns="http://www.w3.org/2000/svg" width="102"
-                  height="9" viewBox="0 0 102 9"
-                  fill="none"
+              </div>
+              <div class="image__main--one">
+                <img
+                  class="image__images"
+                  src="images/slider3.png"
+                  alt="photo"
                 >
-                  <circle cx="4.5" cy="4.5"
-                    r="4.5" fill="#1A5A4C"
+              </div>
+              <div class="image__main--two">
+                <img
+                  class="image__images"
+                  src="images/slider4.png"
+                  alt="photo"
+                >
+              </div>
+              <div class="image__main--three">
+                <img
+                  class="image__images"
+                  src="images/slider5.png"
+                  alt="photo"
+                >
+              </div>
+            </article>
+            <div class="image__buttonss">
+              <svg
+                class="image__button"
+                xmlns="http://www.w3.org/2000/svg" width="102"
+                height="9" viewBox="0 0 102 9"
+                fill="none"
+                >
+                <circle cx="4.5" cy="4.5"
+                  r="4.5" fill="#1A5A4C"
+                >
+                  <circle cx="35.5" cy="4.5"
+                    r="4.5" fill="#E0E0E0"
                   >
-                    <circle cx="35.5" cy="4.5"
+                    <circle cx="66.5" cy="4.5"
                       r="4.5" fill="#E0E0E0"
                     >
-                      <circle cx="66.5" cy="4.5"
+                      <circle cx="97.5" cy="4.5"
                         r="4.5" fill="#E0E0E0"
                       >
-                        <circle cx="97.5" cy="4.5"
-                          r="4.5" fill="#E0E0E0"
-                        >
-                </svg>
-              </div>
+              </svg>
             </div>
           </div>
         </section>
-
 
         <div class="newsletter">
           <div class="container" id="about">
