correction of the specified errors

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header" id="header">
       <div class="header__bg__image"></div>
-      <div class="container header__container">
+      <div class="header__container">
         <div class="header__logo">
           <a href="#" class="header__logo-link">
             <img
@@ -44,9 +44,10 @@
             </div>
           </a>
         </div>
-        <div class="header__events">
-          Події
-        </div>
+        <a href="#relevance" class="header__events">
+          <p class="header__events-text">Події</p>
+          <div class="header__events-line"></div>
+        </a>
       </div>
     </header>
 
@@ -249,29 +250,31 @@
           <section class="subscription" id="subscription">
             <div class="subscription__container">
               <div class="subscription__bg__image">
-                <div class="subscription__content">
-                  <h2 class="subscription__title">Підписка</h2>
-                  <p class="subscription__description">
-                    Бути в курсі всіх актуальних подій та останніх новин.
-                  </p>
-                  <form class="subscription__form">
-                    <input
-                      type="email"
-                      id="email"
-                      name="email"
-                      placeholder="E-mail"
-                      class="subscription__form__input"
-                      required
-                      >
-                    <button type="submit" class="subscription__form__button">
-                      <img
-                        src="/src/images/main/subscription/subscription-arrow-black.svg"
-                        alt="Arrow"
-                        class="subscription__form__button-icon"
-                      >
-                    </button>
-                  </form>
-                </div>
+                <h2 class="subscription__title">Підписка</h2>
+                <p class="subscription__description">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </p>
+
+                <form
+                  id="form-email"
+                  class="subscription__form"
+                  onsubmit="submitForm(event)">
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="subscription__form__input"
+                    required
+                    >
+                  <button type="submit" class="subscription__form__button">
+                    <img
+                      src="/src/images/main/subscription/subscription-arrow-black.svg"
+                      alt="Arrow"
+                      class="subscription__form__button-icon"
+                    >
+                  </button>
+                </form>
               </div>
             </div>
           </section>
@@ -357,25 +360,25 @@
 
             <div class="information__nav">
               <ul class="information__nav__list">
-                <li class="information__nav__item information__nav__item--left">
+                <li class="information__nav__item">
                   <a
                     href="#gallery"
                     class="information__nav__link">Галерея
                   </a>
                 </li>
-                <li class="information__nav__item information__nav__item--left">
+                <li class="information__nav__item">
                   <a
                     href="#subscription"
                     class="information__nav__link">Про Нас
                   </a>
                 </li>
-                <li class="information__nav__item information__nav__item--right">
+                <li class="information__nav__item">
                   <a
                     href="#relevance"
                     class="information__nav__link">Виставки та події
                   </a>
                 </li>
-                <li class="information__nav__item information__nav__item--right">
+                <li class="information__nav__item">
                   <a
                     href="#information"
                     class="information__nav__link">Контакти
