--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,7 @@
               <div class="tikets__button button button--grean"></div>
             </a>
           </div>
-          <div class="header__events">
-            <span>ПОДІЇ</span>
-          </div>
+          <a href="#current-events" class="header__events">ПОДІЇ</a>
 
         </div>
       </div>
@@ -279,8 +277,8 @@
           </a>
 
           <div class="footer__social-media">
-            <a href="#" class="footer__media footer__media--fb icon"></a>
-            <a href="#" class="footer__media footer__media--inst icon"></a>
+            <a href="https://www.facebook.com/namu.museum/?locale=ru_RU" class="footer__media footer__media--fb icon"></a>
+            <a href="https://www.instagram.com/namu.museum/" class="footer__media footer__media--inst icon"></a>
           </div>
         </div>
 
@@ -315,22 +313,26 @@
 
           <ul class="contacts__list">
             <li class="contacts__item">
-              <a href="#" class="contacts__link">
+              <a
+                href="https://maps.app.goo.gl/hKBvdAaT5Py6joaW6"
+                class="contacts__link"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
             </li>
             <li class="contacts__item">
-              <a href="#" class="contacts__link">
+              <a href="tel:38 (044) 278-13-57" class="contacts__link">
                 тел. +38 (044) 278-13-57
               </a>
             </li>
             <li class="contacts__item">
-              <a href="#" class="contacts__link">
+              <a href="tel:38 (044) 278-74-54" class="contacts__link">
                 факс +38 (044) 278-74-54
               </a>
             </li>
             <li class="contacts__item">
-              <a href="#" class="contacts__link">
+              <a href="mailto:info@namu.kiev.ua" class="contacts__link">
                 e-mail: info@namu.kiev.ua
               </a>
             </li>
