--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
     <main class="main body__main">
       <section class="main__section current-events" id="current-events">
         <div class="current-events__container">
-          <h1 class="section-titile">Актуальні події</h1>
+          <h2 class="section-titile">Актуальні події</h2>
 
           <article class="current-events__card">
             <img
@@ -169,7 +169,7 @@
       </section>
 
       <section class="main__section gallery" id="gallery">
-        <h1 class="section-titile gallery__title">Галерея</h1>
+        <h2 class="section-titile gallery__title">Галерея</h2>
 
         <div class="gallery__slider slider">
           <input
@@ -243,7 +243,7 @@
       <section class="main__section subscription">
         <div class="subscription__conteiner">
           <div class="subscription__text">
-            <h1 class="section-titile section-titile--centr subscription__title">Підписка</h1>
+            <h2 class="section-titile section-titile--centr subscription__title">Підписка</h2>
             <p class="subscription__description">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
@@ -277,8 +277,18 @@
           </a>
 
           <div class="footer__social-media">
-            <a href="https://www.facebook.com/namu.museum/?locale=ru_RU" class="footer__media footer__media--fb icon"></a>
-            <a href="https://www.instagram.com/namu.museum/" class="footer__media footer__media--inst icon"></a>
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+              class="footer__media footer__media--fb icon"
+              target="_blank"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="footer__media footer__media--inst icon"
+              target="_blank"
+            >
+            </a>
           </div>
         </div>
 
@@ -322,12 +332,12 @@
               </a>
             </li>
             <li class="contacts__item">
-              <a href="tel:38 (044) 278-13-57" class="contacts__link">
+              <a href="tel:380442781357" class="contacts__link">
                 тел. +38 (044) 278-13-57
               </a>
             </li>
             <li class="contacts__item">
-              <a href="tel:38 (044) 278-74-54" class="contacts__link">
+              <a href="tel:380442787454" class="contacts__link">
                 факс +38 (044) 278-74-54
               </a>
             </li>
