fixed scroll to top with submit

--- a/src/index.html
+++ b/src/index.html
@@ -137,17 +137,19 @@
         <h2 class="subscribe__title">Підписка</h2>
         <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
         <form
+          id="form"
           class="subscribe__form"
           action="#"
           onsubmit="return false;"
         >
           <input
+            id="email"
             type="email"
             class="form-field"
             name="email"
             placeholder="E-mail"
           >
-          <a href="#" class="subscribe__button">
+          <a href="#subscribe" class="subscribe__button">
             <div class="subscribe__button-arrow"></div>
           </a>
         </form>
@@ -233,7 +235,7 @@
       </nav>
       <div class="rights-information grid__item--tablet-1-6 grid__item--desktop-1-12">
         <p class="rights-information__item">Designed by Zhyriada Marina</p>
-        <p class="rights-information__item">Copyright © 2019. All Rights Reserved.</p>
+        <p class="rights-information__item">Copyright © 2023. All Rights Reserved.</p>
       </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
