--- a/src/index.html
+++ b/src/index.html
@@ -371,8 +371,8 @@
         </nav>
 
         <div class="footer__service-data">
-          <span>Designed by Zhyriada Marina</span>
-          <span>Copyright © 2019. All Rights Reserved.</span>
+          <a href="#" class="footer__service-text">Designed by Zhyriada Marina</a>
+          <a href="#" class="footer__service-text">Copyright © 2019. All Rights Reserved.</a>
         </div>
 
       </div>
