implement dark side with menu

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,6 @@
     </nav>
 
     <main>
-
       <section class="events container" id="events">
         <h2 class="events__title">Актуальні події</h2>
         <div class="events-card">
@@ -148,10 +147,11 @@
             class="form-field"
             name="email"
             placeholder="E-mail"
+            required
           >
-          <a href="#subscribe" class="subscribe__button">
+          <button class="subscribe__button" type="submit">
             <div class="subscribe__button-arrow"></div>
-          </a>
+          </button>
         </form>
       </section>
 
