--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
     <header class="header" id="header">
 
       <div class="header__image">
+        <a href="#menu" class="header__burger-menu header__burger-menu-phone">
+          <img src="./icons/burger-menu-icon.svg" alt="menu">
+        </a>
+
         <div class="header__logo-wrapper">
           <a href="#" class="header__logo">
             NA
@@ -45,13 +49,15 @@
         </div>
       </div>
 
-      <a href="#menu" class="header__burger-menu">
-        <img src="./icons/burger-menu-icon.svg" alt="menu">
-      </a>
-
       <div class="header__content">
+        <a href="#menu" class="header__burger-menu header__burger-menu-fromTablet">
+          <img src="./icons/burger-menu-icon.svg" alt="menu">
+        </a>
+
         <h1 class="header__tittle">
-          ХУДОЖНІЙ МУЗЕЙ
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
         </h1>
 
         <div class="buttonTickets">
@@ -79,11 +85,11 @@
     </header>
 
     <menu class="menu" id="menu">
-      <a class="menu__close" href="#">
-        <img src="./icons/close-icon.svg" alt="close">
-      </a>
-
       <div class="menu__content">
+        <a class="menu__close" href="#">
+          <img src="./icons/close-icon.svg" alt="close">
+        </a>
+
         <nav class="menu__nav">
           <a href="#gallery" class="menu__nav-link menu__nav-link--1">
             Галерея
@@ -143,6 +149,8 @@
       </div>
     </menu>
 
+    <div class="dark-bg"></div>
+
     <main class="main">
       <section class="relevant" id="relevant">
         <div class="relevant__tittle-wraper">
@@ -152,9 +160,7 @@
         </div>
 
         <div class="action action--one">
-          <div class="action__image-wrapper">
-            <div class="action__image action__image--one"></div>
-          </div>
+          <div class="action__image action__image--one"></div>
 
           <div class="action__content">
             <div class="details">
@@ -182,9 +188,7 @@
         </div>
 
         <div class="action action--two">
-          <div class="action__image-wrapper">
-            <div class="action__image action__image--two"></div>
-          </div>
+          <div class="action__image action__image--two"></div>
 
           <div class="action__content">
             <div class="details">
@@ -251,21 +255,13 @@
         </div>
 
         <div class="gallery__photos">
-          <div class="gallery__photo-wrapper gallery__photo-wrapper--1">
-            <div class="gallery__photo gallery__photo--1"></div>
-          </div>
+          <div class="gallery__photo gallery__photo--1"></div>
 
-          <div class="gallery__photo-wrapper gallery__photo-wrapper--2">
-            <div class="gallery__photo gallery__photo--2"></div>
-          </div>
+          <div class="gallery__photo gallery__photo--2"></div>
 
-          <div class="gallery__photo-wrapper gallery__photo-wrapper--3">
-            <div class="gallery__photo gallery__photo--3"></div>
-          </div>
+          <div class="gallery__photo gallery__photo--3"></div>
 
-          <div class="gallery__photo-wrapper gallery__photo-wrapper--4">
-            <div class="gallery__photo gallery__photo--4"></div>
-          </div>
+          <div class="gallery__photo gallery__photo--4"></div>
         </div>
       </section>
 
@@ -280,7 +276,8 @@
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
               <form
-                action="#"
+                onsubmit="this.reset(); return false;"
+                action="#subscription"
                 method="post"
                 class="subscription__form"
               >
