add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -439,35 +439,39 @@
 
           <div class="footer__contact">
             <h2 class="footer__layoutwork">Контакти</h2>
-            <a
-              class="footer__infos"
-              href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
-              target="_blank"
-            >
-              <br>
+            <div class="footer__hover">
+              <a
+                class="footer__infos"
+                href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
-            </a>
-            <a
-              class="footer__info"
-              href="tel:+380442781357"
-            >
-              <br>
+              </a>
+            </div>
+            <div class="footer__hovers">
+              <a
+                class="footer__info"
+                href="tel:+380442781357"
+              >
                 тел. +38 (044) 278-13-57
-            </a>
-            <a
-              class="footer__info"
-              href="tel:+380442787454"
-            >
-              <br>
+              </a>
+            </div>
+            <div class="footer__hovers">
+              <a
+                class="footer__info"
+                href="tel:+380442787454"
+              >
                 факс +38 (044) 278-74-54
-            </a>
-            <a class="footer__info"
-              href="mailto:info@namu.kiev.ua"
-              target="_blank"
-            >
-              <br>
-              e-mail:info@namu.kiev.ua
-            </a>
+              </a>
+            </div>
+            <div class="footer__hovers">
+              <a class="footer__info"
+                href="mailto:info@namu.kiev.ua"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
           <a class="footer__tops" href="#page-top">
             <svg
