--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body">
+  <body class="page__body page">
 
     <header class="header" id="Home">
       <a href="#Events" class="header__addition">події</a>
@@ -242,9 +242,11 @@
             placeholder="E-mail"
             class="form__input"
             required="">
-            <button type="submit" class="form__button">
+            <button
+            id="btn__form"
+            type="submit"
+            class="form__button">
               <img 
-              id="btn__form"
               src="./images/rvector.svg"
               alt="Form arrow"
               class="form__button-img">
