add header and menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container container">
+        <a class="icon icon--burger" href="#menu">
+          <span class="sr-only">Open menu</span>
+        </a>
+
+        <a class="header__logo logo" href="#">
+          <span class="sr-only">Go to main section</span>
+          <img
+            class="logo__img"
+            src="images/logo.svg"
+            alt="Namu logo"
+          >
+        </a>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__container container">
+        <div class="menu__top">
+          <a class="icon icon--close" href="#">
+            <span class="sr-only">Close menu</span>
+          </a>
+
+          <nav class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__timetable">
+          <span class="menu__timetable-title">Графік роботи</span>
+
+          <div class="menu__timetable-inner">
+            <ul class="menu__timetable-list">
+              <li class="menu__timetable-item">
+                <span class="menu__timetable-time">12:00 — 20:00</span>
+                середа
+              </li>
+              <li class="menu__timetable-item">
+                <span class="menu__timetable-time">12:00 — 20:00</span>
+                четвер
+              </li>
+              <li class="menu__timetable-item">
+                <span class="menu__timetable-time">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+              <li class="menu__timetable-item">
+                <span class="menu__timetable-time">11:00 — 19:00</span>
+                субота
+              </li>
+              <li class="menu__timetable-item">
+                <span class="menu__timetable-time">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+
+            <p class="menu__timetable-text">
+              <span>Вихідні:</span> понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
